fix: status effect wrapping

--- a/styles/style.css
+++ b/styles/style.css
@@ -177,27 +177,28 @@ li, ul {
 /* Status Effects */
 
 .middle-left {
+  position: absolute; 
+  top: 20%;
   width: 5vw;
-  height: 100%;
+  height: 50%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
   gap: 5px;
+  margin-left: 10px;
+  z-index: 1;
+
 }
 
 .middle-left div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 50px;
   height: 50px;
-  text-align: center;
-  color: #000;
-  font-size: 0.8rem;
-  background-color: #dededd;
   border: 2px solid #252b3b;
   border-radius: 10px;
+  z-index: 1;
 }
 
 .middle-center {
@@ -206,7 +207,7 @@ li, ul {
   flex-direction: column;
   flex-grow: 1; 
   width: 30vw;
-  height: 100%;
+  /* height: 100%; */
   padding: 20px 40px 20px 40px;
   font-size: 1.5rem;
   overflow: hidden;
@@ -1114,7 +1115,7 @@ progress[value]::-moz-progress-bar {
 .statusTooltip {
   position: relative;
   cursor: pointer;
-  z-index: 1;
+  z-index: 3;
 }
 
 .tooltipText {
@@ -1178,6 +1179,7 @@ progress[value]::-moz-progress-bar {
 .tooltipText li, 
 .statusTooltipText li {
   list-style: none;
+  z-index: 3;
 }
 
 /* 
@@ -1208,7 +1210,7 @@ progress[value]::-moz-progress-bar {
   height: 56%; */
   width: 720px;
   height: 520px;
-  overflow: auto;
+  /* overflow: auto; */
   padding: 0px;
 }
 
